@@ -172,9 +172,8 @@ abstract class BaseScanner extends Chore implements HConstants {
         String serverName = Writables.cellToString(values.get(COL_SERVER));
         long startCode = Writables.cellToLong(values.get(COL_STARTCODE));
         if (LOG.isDebugEnabled()) {
-          LOG.debug(Thread.currentThread().getName() + " {" +
-            info.toString() + "}, SERVER => '" + serverName +
-            "', STARTCODE => " + startCode);
+          LOG.debug(Thread.currentThread().getName() + info.toString() +
+            "}, SERVER => '" + serverName + "', STARTCODE => " + startCode);
         }
 
         // Note Region has been assigned.
