@@ -64,6 +64,7 @@ Hbase Change Log
    HBASE-615   Region balancer oscillates during cluster startup
    HBASE-613   Timestamp-anchored scanning fails to find all records
    HBASE-681   NPE in Memcache
+   HBASE-701   Showing bytes in log when should be String
    
    
   IMPROVEMENTS
